--- a/frontend/src/app/pages/ddo/ddo.component.html
+++ b/frontend/src/app/pages/ddo/ddo.component.html
@@ -2,53 +2,97 @@
   <mat-card-title class="title">
     Documento de Oficialização de Demanda Orçamentária
   </mat-card-title>
-  <mat-card-subtitle class="subtitle">
-    Cadastro de DDOs
-  </mat-card-subtitle>
+  <mat-card-subtitle class="subtitle"> Cadastro de DDOs </mat-card-subtitle>
 </mat-card>
 
 <mat-card class="home mat-elevation-z4">
   <div class="search-div">
     <mat-form-field class="search-form-field">
-      <input matInput [(ngModel)]="searchKey" placeholder="Pesquisa" autocomplete="off" (keyup)="pesquisar()">
-      <button mat-button matSuffix mat-icon-button matTooltip="Limpar pesquisa" (click)="limparPesquisa()">
+      <input
+        matInput
+        [(ngModel)]="searchKey"
+        placeholder="Pesquisa"
+        autocomplete="off"
+        (keyup)="pesquisar()"
+      />
+      <button
+        mat-button
+        matSuffix
+        mat-icon-button
+        matTooltip="Limpar pesquisa"
+        (click)="limparPesquisa()"
+      >
         <mat-icon>close</mat-icon>
       </button>
     </mat-form-field>
   </div>
   <table mat-table class="full-width-table" [dataSource]="ddos" matSort>
-    
     <ng-container matColumnDef="nome_acao">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header matTooltip="Ação da JT">Ação da JT</th>
-      <td mat-cell *matCellDef="let row">{{row.nome_acao}}</td>
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        matTooltip="Ação da JT"
+      >
+        Ação da JT
+      </th>
+      <td mat-cell *matCellDef="let row">{{ row.nome_acao }}</td>
     </ng-container>
 
     <ng-container matColumnDef="nome_ug">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header matTooltip="Unidade Gestora">Demandante</th>
-      <td mat-cell *matCellDef="let row">{{row.nome_ug}}</td>
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        matTooltip="Unidade Gestora"
+      >
+        Demandante
+      </th>
+      <td mat-cell *matCellDef="let row">{{ row.nome_ug }}</td>
     </ng-container>
 
     <ng-container matColumnDef="vlr_demandado">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header matTooltip="Valor Demandado">Vlr. Demandado</th>
-      <td mat-cell *matCellDef="let row">{{row.vlr_demandado | currency: 'BRL'}}</td>
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        matTooltip="Valor Demandado"
+      >
+        Vlr. Demandado
+      </th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.vlr_demandado | currency: "BRL" }}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="recurso_proprio">
-      <th mat-header-cell *matHeaderCellDef matTooltip="Recurso da UG">Recurso Próprio</th>
-      <td mat-cell *matCellDef="let row">{{row.recurso_proprio | currency: 'BRL'}}</td>
+      <th mat-header-cell *matHeaderCellDef matTooltip="Recurso da UG">
+        Recurso Próprio
+      </th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.recurso_proprio | currency: "BRL" }}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="novo">
-      <th mat-header-cell *matHeaderCellDef matTooltip="Tipo da demanda">Demanda</th>
+      <th mat-header-cell *matHeaderCellDef matTooltip="Tipo da demanda">
+        Demanda
+      </th>
       <td mat-cell *matCellDef="let row">
-        <div *ngIf="row.novo; then demandaNova else demandaContinuada"></div>
+        <div *ngIf="row.novo; then demandaNova; else demandaContinuada"></div>
         <ng-template #demandaNova>Nova</ng-template>
         <ng-template #demandaContinuada>Continuada</ng-template>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="aprc_cgtic_local">
-      <th mat-header-cell *matHeaderCellDef matTooltip="Aprovado pelo CGTIC da UG">CGTIC Local</th>
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        matTooltip="Aprovado pelo CGTIC da UG"
+      >
+        CGTIC Local
+      </th>
       <td mat-cell *matCellDef="let row">
         <mat-checkbox [checked]="row.aprc_cgtic_local" disabled="true">
           Aprovado
@@ -57,16 +101,24 @@
     </ng-container>
 
     <ng-container matColumnDef="possui_dod">
-      <th mat-header-cell *matHeaderCellDef matTooltip="Enviou DOD">Possui DOD</th>
+      <th mat-header-cell *matHeaderCellDef matTooltip="Enviou DOD">
+        Possui DOD
+      </th>
       <td mat-cell *matCellDef="let row">
-        <div *ngIf="row.possui_dod; then possuiDOD else naoPossuiDOD"></div>
+        <div *ngIf="row.possui_dod; then possuiDOD; else naoPossuiDOD"></div>
         <ng-template #possuiDOD>Sim</ng-template>
         <ng-template #naoPossuiDOD>Não</ng-template>
       </td>
     </ng-container>
 
     <ng-container matColumnDef="compr_liquidacao">
-      <th mat-header-cell *matHeaderCellDef matTooltip="Compromisso de liquidar">Liquidar</th>
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        matTooltip="Compromisso de liquidar"
+      >
+        Liquidar
+      </th>
       <td mat-cell *matCellDef="let row">
         <mat-checkbox [checked]="row.compr_liquidacao" disabled="true">
           Se compromete
@@ -75,7 +127,13 @@
     </ng-container>
 
     <ng-container matColumnDef="cronograma">
-      <th mat-header-cell *matHeaderCellDef matTooltip="Possui cronograma de execução">Cronograma</th>
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        matTooltip="Possui cronograma de execução"
+      >
+        Cronograma
+      </th>
       <td mat-cell *matCellDef="let row">
         <mat-checkbox [checked]="row.cronograma" disabled="true">
           Possui
@@ -84,16 +142,26 @@
     </ng-container>
 
     <ng-container matColumnDef="ass_presidente">
-      <th mat-header-cell *matHeaderCellDef matTooltip="Possui assinatura do Presidente">Assinatura</th>
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        matTooltip="Possui assinatura do Presidente"
+      >
+        Assinatura
+      </th>
       <td mat-cell *matCellDef="let row">
-        <div *ngIf="row.ass_presidente; then possuiAssi else naoPossuiAssi"></div>
+        <div
+          *ngIf="row.ass_presidente; then possuiAssi; else naoPossuiAssi"
+        ></div>
         <ng-template #possuiAssi>Sim</ng-template>
         <ng-template #naoPossuiAssi>Não</ng-template>
       </td>
     </ng-container>
-    
+
     <ng-container matColumnDef="po_local">
-      <th mat-header-cell *matHeaderCellDef matTooltip="Inserido do PO da UG">PO Local</th>
+      <th mat-header-cell *matHeaderCellDef matTooltip="Inserido do PO da UG">
+        PO Local
+      </th>
       <td mat-cell *matCellDef="let row">
         <mat-checkbox [checked]="row.po_local" disabled="true">
           Incluso
@@ -102,35 +170,52 @@
     </ng-container>
 
     <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef >Ações</th>
+      <th mat-header-cell *matHeaderCellDef>Ações</th>
       <td mat-cell *matCellDef="let row">
-
-        <a matTooltip="Itens da ARP"
-          routerLink="/ddo/item/{{ row.id_ddo }}" class="itens">
-          <i class="material-icons">
-            list
-          </i>
+        <a
+          matTooltip="Itens do DDO"
+          routerLink="/ddo/item/{{ row.id_ddo }}"
+          class="itens"
+        >
+          <i class="material-icons"> list </i>
         </a>
 
-        <button matTooltip="Editar DDO" mat-icon-button (click)="updateDdo( row.id_ddo )">
+        <button
+          matTooltip="Editar DDO"
+          mat-icon-button
+          (click)="updateDdo(row.id_ddo)"
+        >
           <mat-icon class="edit">edit</mat-icon>
         </button>
 
-        <button matTooltip="Excluir Ddo" mat-icon-button (click)="deleteDdo( row.id_ddo )">
+        <button
+          matTooltip="Excluir Ddo"
+          mat-icon-button
+          (click)="deleteDdo(row.id_ddo)"
+        >
           <mat-icon class="delete">delete</mat-icon>
         </button>
-
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 15]" [pageSize]="5" showFirstLastButtons></mat-paginator>
+  <mat-paginator
+    [pageSizeOptions]="[5, 10, 15]"
+    [pageSize]="5"
+    showFirstLastButtons
+  ></mat-paginator>
 </mat-card>
 
 <mat-card class="mat-elevation-z0 adicionar">
-  <button matTooltip="Novo DDO" mat-mini-fab color="primary" (click)="novoDdo()" class="botao">
+  <button
+    matTooltip="Novo DDO"
+    mat-mini-fab
+    color="primary"
+    (click)="novoDdo()"
+    class="botao"
+  >
     <mat-icon>add</mat-icon>
   </button>
 </mat-card>
