--- a/frontend/src/app/pages/licitacao/licitacao-item/licitacao-item-list/licitacao-item-list.component.html
+++ b/frontend/src/app/pages/licitacao/licitacao-item/licitacao-item-list/licitacao-item-list.component.html
@@ -1,19 +1,33 @@
 <mat-card class="titulo mat-elevation-z0">
-  <mat-card-title class="title">
-    Itens da Licitação
-  </mat-card-title>
+  <mat-card-title class="title"> Itens da Licitação </mat-card-title>
   <mat-card-subtitle class="subtitle">
-    Cadastro de Itens da <strong>Licitação {{ licitacao.num_licitacao }}/{{licitacao.ano_licitacao}}</strong>
+    Cadastro de Itens da
+    <strong
+      >Licitação {{ licitacao.num_licitacao }}/{{
+        licitacao.ano_licitacao
+      }}</strong
+    >
   </mat-card-subtitle>
 </mat-card>
 
 <mat-card class="home mat-elevation-z4">
-
   <!-- Caixa de pesquisa -->
   <div class="search-div">
     <mat-form-field class="search-form-field">
-      <input matInput [(ngModel)]="searchKey" placeholder="Pesquisa" autocomplete="off" (keyup)="pesquisar()">
-      <button mat-button matSuffix mat-icon-button matTooltip="Limpar pesquisa" (click)="limparPesquisa()">
+      <input
+        matInput
+        [(ngModel)]="searchKey"
+        placeholder="Pesquisa"
+        autocomplete="off"
+        (keyup)="pesquisar()"
+      />
+      <button
+        mat-button
+        matSuffix
+        mat-icon-button
+        matTooltip="Limpar pesquisa"
+        (click)="limparPesquisa()"
+      >
         <mat-icon>close</mat-icon>
       </button>
     </mat-form-field>
@@ -21,50 +35,60 @@
 
   <!-- Campos do formulário -->
   <table mat-table class="full-width-table" [dataSource]="itens" matSort>
-
     <ng-container matColumnDef="num_licitacao_item">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Número do Item</th>
-      <td mat-cell *matCellDef="let row">{{row.num_licitacao_item}}</td>
+      <td mat-cell *matCellDef="let row">{{ row.num_licitacao_item }}</td>
     </ng-container>
 
     <ng-container matColumnDef="nome_licitacao_item">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>Item da Licitação</th>
-      <td mat-cell *matCellDef="let row">{{row.nome_licitacao_item}}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>
+        Item da Licitação
+      </th>
+      <td mat-cell *matCellDef="let row">{{ row.nome_licitacao_item }}</td>
     </ng-container>
 
     <ng-container matColumnDef="valor">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Valor</th>
-      <td mat-cell *matCellDef="let row">{{row.valor | currency: 'BRL'}}</td>
+      <td mat-cell *matCellDef="let row">{{ row.valor | currency: "BRL" }}</td>
     </ng-container>
 
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef>Ações</th>
       <td mat-cell *matCellDef="let row">
-
-        <button matTooltip="Editar Item" mat-icon-button (click)="updateItem( row.id_licitacao_item )">
+        <button
+          matTooltip="Editar Item"
+          mat-icon-button
+          (click)="updateItem(row.id_licitacao_item)"
+        >
           <mat-icon class="edit">edit</mat-icon>
         </button>
 
-        <button matTooltip="Excluir Item" mat-icon-button (click)="deleteItem( row.id_licitacao_item )">
+        <button
+          matTooltip="Excluir Item"
+          mat-icon-button
+          (click)="deleteItem(row.id_licitacao_item)"
+        >
           <mat-icon class="delete">delete</mat-icon>
         </button>
-        
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 15]" [pageSize]="5" showFirstLastButtons></mat-paginator>
+  <mat-paginator
+    [pageSizeOptions]="[5, 10, 15]"
+    [pageSize]="5"
+    showFirstLastButtons
+  ></mat-paginator>
 </mat-card>
 
 <!-- Botões de navegação -->
 <mat-card class="mat-elevation-z0 adicionar">
-  <button matTooltip="Novo Item" mat-fab color="primary" (click)="novoItem()" >
+  <button matTooltip="Novo Item" mat-fab color="primary" (click)="novoItem()">
     <mat-icon>add</mat-icon>
   </button>
-  <a routerLink="/arp">
+  <a routerLink="/licitacao">
     <button matTooltip="Voltar" mat-fab color="basic" class="voltar">
       <mat-icon>undo</mat-icon>
     </button>
