--- a/frontend/src/app/pages/descent/descent.component.html
+++ b/frontend/src/app/pages/descent/descent.component.html
@@ -7,6 +7,82 @@
   </mat-card-subtitle>
 </mat-card>
 
+<mat-card class="mat-elevation-z4">
+  <!-- Seleção da Ação -->
+  <mat-form-field>
+    <mat-label>Ações da JT</mat-label>
+    <mat-select (selectionChange)="buscaDescents($event.value)">
+      <mat-option *ngFor="let acao of acoes" [value]="acao.id_acao">
+        {{ acao.nome }}
+      </mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <table mat-table [dataSource]="dados" class="full-width-table">
+    <ng-container matColumnDef="nome_acao">
+      <th mat-header-cell *matHeaderCellDef>Ação da JT</th>
+      <td mat-cell *matCellDef="let row">{{ row.nome_acao }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="num_processo">
+      <th mat-header-cell *matHeaderCellDef>Nr. PAE</th>
+      <td mat-cell *matCellDef="let row">{{ row.num_processo }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="ord_descentralizacao">
+      <th mat-header-cell *matHeaderCellDef>Descentralização</th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.ord_descentralizacao }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef>Ações</th>
+      <td mat-cell *matCellDef="let row">
+        <a
+          matTooltip="Itens do DDO"
+          routerLink="/descentralizacao"
+          class="itens"
+        >
+          <i class="material-icons"> list </i>
+        </a>
+        <button
+          matTooltip="Editar Descentralização"
+          mat-icon-button
+          (click)="updateDescent()"
+        >
+          <mat-icon class="edit">edit</mat-icon>
+        </button>
+
+        <button
+          matTooltip="Excluir Descentralização"
+          mat-icon-button
+          (click)="deleteDescent()"
+        >
+          <mat-icon class="delete">delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+  <mat-paginator [pageSize]="5"></mat-paginator>
+</mat-card>
+
+<mat-card class="mat-elevation-z0 adicionar">
+  <button
+    matTooltip="Nova Descentralização"
+    mat-mini-fab
+    color="primary"
+    (click)="novaDescent()"
+    class="botao"
+  >
+    <mat-icon>add</mat-icon>
+  </button>
+</mat-card>
+
+<!-- 
 <mat-card class="home mat-elevation-z4">
   <div class="search-div">
     <mat-form-field class="search-form-field">
@@ -122,4 +198,4 @@
   >
     <mat-icon>add</mat-icon>
   </button>
-</mat-card>
+</mat-card> -->
