--- a/frontend/src/app/pages/descent/descent.component.scss
+++ b/frontend/src/app/pages/descent/descent.component.scss
@@ -39,14 +39,8 @@
   text-align: right;
 }
 
-.search-div {
-  margin: 10px;
-  display: flex;
-  flex-direction: row;
-}
-
-.search-form-field {
-  width: 70%;
-  margin-left: 10px;
-  padding: 5px 10px;
+.itens {
+  margin-right: 10px;
+  color: #6495ed;
+  vertical-align: bottom;
 }
