--- a/frontend/src/app/pages/descent/descent.component.html
+++ b/frontend/src/app/pages/descent/descent.component.html
@@ -40,7 +40,7 @@
       <th mat-header-cell *matHeaderCellDef>Ações</th>
       <td mat-cell *matCellDef="let row">
         <a
-          matTooltip="Itens do DDO"
+          matTooltip="DDOs da Descentralização"
           routerLink="/descentralizacao"
           class="itens"
         >
