CGGOV-3370 - Alterações no Backend

--- a/frontend/src/app/pages/descent/descent.component.html
+++ b/frontend/src/app/pages/descent/descent.component.html
@@ -44,7 +44,7 @@
       <td mat-cell *matCellDef="let row">
         <a
           matTooltip="DDOs da Descentralização"
-          routerLink="/descentralizacao"
+          routerLink="/descentralizacao/{{ row.id_pae_descentralizacao }}"
           class="itens"
         >
           <i class="material-icons"> list </i>
