--- a/frontend/src/app/pages/descent/descent-ddo/descent-ddo-list/descent-ddo-list.component.html
+++ b/frontend/src/app/pages/descent/descent-ddo/descent-ddo-list/descent-ddo-list.component.html
@@ -1,1 +1,87 @@
-<p>descent-ddo-list works!</p>
+<mat-card class="titulo mat-elevation-z0">
+  <mat-card-title class="title"> Itens da Descentralização </mat-card-title>
+  <mat-card-subtitle class="subtitle">
+    Cadastro de Itens de
+    <strong
+      >{{ descentDdo.num_processo }} - {{ descentDdo.nome_acao }} -
+      {{ descentDdo.ord_descentralizacao }}</strong
+    >
+  </mat-card-subtitle>
+</mat-card>
+
+<mat-card class="home mat-elevation-z4">
+  <table mat-table class="full-width-table" [dataSource]="ddoItens" matSort>
+    <ng-container matColumnDef="identifica_ddo">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>DDO</th>
+      <td mat-cell *matCellDef="let row">{{ row.identifica_ddo }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="qtd_aprovada">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Qtd. Aprovada</th>
+      <td mat-cell *matCellDef="let row">{{ row.qtd_aprovada }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="vlr_aprovado">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Valor Aprovado</th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.vlr_aprovado | currency: "BRL" }}
+      </td>
+    </ng-container>
+
+    <ng-container matColumnDef="reuniao_cgtic">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Reunião CGTIC</th>
+      <td mat-cell *matCellDef="let row">{{ row.reuniao_cgtic }}</td>
+    </ng-container>
+    <ng-container matColumnDef="dt_aprov_cgtic">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Data Aprovação</th>
+      <td mat-cell *matCellDef="let row">{{ row.dt_aprov_cgtic | date }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef>Ações</th>
+      <td mat-cell *matCellDef="let row">
+        <button
+          matTooltip="Editar Item"
+          mat-icon-button
+          (click)="updateItem(row.id_ddo_descentralizacao)"
+        >
+          <mat-icon class="edit">edit</mat-icon>
+        </button>
+
+        <button
+          matTooltip="Excluir Item"
+          mat-icon-button
+          (click)="deleteItem(row.id_ddo_descentralizacao)"
+        >
+          <mat-icon class="delete">delete</mat-icon>
+        </button>
+      </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+  <mat-paginator
+    [pageSizeOptions]="[5, 10, 15]"
+    [pageSize]="5"
+    showFirstLastButtons
+  ></mat-paginator>
+</mat-card>
+
+<!-- Botões de navegação -->
+<mat-card class="mat-elevation-z0 adicionar">
+  <button
+    matTooltip="Novo Item"
+    mat-mini-fab
+    color="primary"
+    (click)="novoItem()"
+  >
+    <mat-icon>add</mat-icon>
+  </button>
+  <a routerLink="/descentralizacao">
+    <!-- <a href="javascript:history.back()"> -->
+    <button matTooltip="Voltar" mat-mini-fab color="basic" class="voltar">
+      <mat-icon>undo</mat-icon>
+    </button>
+  </a>
+</mat-card>
