--- a/frontend/src/app/pages/descent/descent-ddo/descent-ddo-list/descent-ddo-list.component.html
+++ b/frontend/src/app/pages/descent/descent-ddo/descent-ddo-list/descent-ddo-list.component.html
@@ -1,9 +1,9 @@
 <mat-card class="titulo mat-elevation-z0">
   <mat-card-title class="title"> Itens da Descentralização </mat-card-title>
   <mat-card-subtitle class="subtitle">
-    Cadastro de Itens de
-    <strong
-      >{{ descentDdo.num_processo }} - {{ descentDdo.nome_acao }} -
+    Cadastro de Itens do PAE:
+    <strong>
+      {{ descentDdo.num_processo }} - {{ descentDdo.nome_acao }} -
       {{ descentDdo.ord_descentralizacao }}</strong
     >
   </mat-card-subtitle>
@@ -11,9 +11,9 @@
 
 <mat-card class="home mat-elevation-z4">
   <table mat-table class="full-width-table" [dataSource]="ddoItens" matSort>
-    <ng-container matColumnDef="identifica_ddo">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header>DDO</th>
-      <td mat-cell *matCellDef="let row">{{ row.identifica_ddo }}</td>
+    <ng-container matColumnDef="nome_ug">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Regional</th>
+      <td mat-cell *matCellDef="let row">{{ row.nome_ug }}</td>
     </ng-container>
 
     <ng-container matColumnDef="qtd_aprovada">
