--- a/frontend/src/app/pages/descent/descent-ddo/descent-ddo-list/descent-ddo-list.component.html
+++ b/frontend/src/app/pages/descent/descent-ddo/descent-ddo-list/descent-ddo-list.component.html
@@ -10,6 +10,29 @@
 </mat-card>
 
 <mat-card class="home mat-elevation-z4">
+  <!-- Caixa de pesquisa -->
+  <div class="search-div">
+    <mat-form-field class="search-form-field">
+      <input
+        matInput
+        [(ngModel)]="searchKey"
+        placeholder="Pesquisa"
+        autocomplete="off"
+        (keyup)="pesquisar()"
+      />
+      <button
+        mat-button
+        matSuffix
+        mat-icon-button
+        matTooltip="Limpar pesquisa"
+        (click)="limparPesquisa()"
+      >
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-form-field>
+  </div>
+
+  <!-- Campos do formulário -->
   <table mat-table class="full-width-table" [dataSource]="ddoItens" matSort>
     <ng-container matColumnDef="nome_ug">
       <th mat-header-cell *matHeaderCellDef mat-sort-header>Regional</th>
