--- a/frontend/src/app/pages/descent/descent.component.html
+++ b/frontend/src/app/pages/descent/descent.component.html
@@ -8,28 +8,40 @@
 </mat-card>
 
 <mat-card class="mat-elevation-z4">
-  <!-- Seleção da Ação -->
-  <mat-form-field>
-    <mat-label>Ações da JT</mat-label>
-    <mat-select
-      (selectionChange)="buscaDescents($event.value)"
-      [(ngModel)]="searchKey"
-    >
-      <mat-option *ngFor="let acao of acoes" [value]="acao.id_acao">
-        {{ acao.nome }}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
+  <div class="search-div">
+    <mat-form-field class="search-form-field">
+      <input
+        matInput
+        [(ngModel)]="searchKey"
+        placeholder="Pesquisa"
+        autocomplete="off"
+        (keyup)="pesquisar()"
+      />
+      <button
+        mat-button
+        matSuffix
+        mat-icon-button
+        matTooltip="Limpar pesquisa"
+        (click)="limparPesquisa()"
+      >
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-form-field>
+  </div>
 
-  <table mat-table [dataSource]="dados" class="full-width-table">
+  <table mat-table [dataSource]="dados" class="full-width-table" matSort>
     <ng-container matColumnDef="nome_acao">
-      <th mat-header-cell *matHeaderCellDef>Ação da JT</th>
-      <td mat-cell *matCellDef="let row">{{ row.nome_acao }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Ação da JT</th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.nome_acao }}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="num_processo">
-      <th mat-header-cell *matHeaderCellDef>Nr. PAE</th>
-      <td mat-cell *matCellDef="let row">{{ row.num_processo }}</td>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header>Nr. PAE</th>
+      <td mat-cell *matCellDef="let row">
+        {{ row.num_processo }}
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="ord_descentralizacao">
