--- a/frontend/src/app/pages/descent/descent.component.scss
+++ b/frontend/src/app/pages/descent/descent.component.scss
@@ -44,3 +44,15 @@
   color: #6495ed;
   vertical-align: bottom;
 }
+
+.search-div {
+  margin: 10px;
+  display: flex;
+  flex-direction: row;
+}
+
+.search-form-field {
+  width: 70%;
+  margin-left: 10px;
+  padding: 5px 10px;
+}
