Editar e deletar itens da descentralização

--- a/frontend/src/app/pages/descent/descent-ddo/descent-ddo-update/descent-ddo-update.component.html
+++ b/frontend/src/app/pages/descent/descent-ddo/descent-ddo-update/descent-ddo-update.component.html
@@ -47,7 +47,7 @@
             />
           </mat-form-field>
           <mat-form-field>
-            <mat-label>Procedimento</mat-label>
+            <mat-label>Reunião CGTIC</mat-label>
             <mat-select formControlName="reuniao_cgtic">
               <mat-option *ngFor="let reuniao of reunioes" [value]="reuniao">
                 {{ reuniao }}
