--- a/frontend/src/app/pages/nota-credito/nota-credito.component.html
+++ b/frontend/src/app/pages/nota-credito/nota-credito.component.html
@@ -1,7 +1,5 @@
 <mat-card class="titulo mat-elevation-z0">
-  <mat-card-title class="title">
-    Notas de Crédito
-  </mat-card-title>
+  <mat-card-title class="title"> Notas de Crédito </mat-card-title>
   <mat-card-subtitle class="subtitle">
     Cadastro de notas de crédito
   </mat-card-subtitle>
@@ -10,62 +8,134 @@
 <mat-card class="home mat-elevation-z4">
   <div class="search-div">
     <mat-form-field class="search-form-field">
-      <input matInput [(ngModel)]="searchKey" placeholder="Pesquisa" autocomplete="off" (keyup)="pesquisar()">
-      <button mat-button matSuffix mat-icon-button matTooltip="Limpar pesquisa" (click)="limparPesquisa()">
+      <input
+        matInput
+        [(ngModel)]="searchKey"
+        placeholder="Pesquisa"
+        autocomplete="off"
+        (keyup)="pesquisar()"
+      />
+      <button
+        mat-button
+        matSuffix
+        mat-icon-button
+        matTooltip="Limpar pesquisa"
+        (click)="limparPesquisa()"
+      >
         <mat-icon>close</mat-icon>
       </button>
     </mat-form-field>
   </div>
 
   <table mat-table class="full-width-table" [dataSource]="ntCreditos" matSort>
-
-    <ng-container matColumnDef="num_nota_credito">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header matTooltip="Número da Nota de Crédito">Número</th>
-      <td mat-cell *matCellDef="let row">{{row.num_nota_credito}}</td>
-    </ng-container>
-
-    <ng-container matColumnDef="nome_ug">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header matTooltip="Demandante">Demandante</th>
-      <td mat-cell *matCellDef="let row">{{row.nome_ug}}</td>
+    <ng-container matColumnDef="gnd">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header matTooltip="GND">
+        GND
+      </th>
+      <td mat-cell *matCellDef="let row">{{ row.gnd }}</td>
     </ng-container>
 
     <ng-container matColumnDef="nome_acao">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header matTooltip="Ação da JT">Ação</th>
-      <td mat-cell *matCellDef="let row">{{row.nome_acao}}</td>
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        matTooltip="Ação da JT"
+      >
+        Ação
+      </th>
+      <td mat-cell *matCellDef="let row">{{ row.nome_acao }}</td>
     </ng-container>
 
-    <ng-container matColumnDef="valor">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header matTooltip="Valor da Nota de Crédito">Valor</th>
-      <td mat-cell *matCellDef="let row">{{row.valor | currency: 'BRL'}}</td>
+    <ng-container matColumnDef="nome_ug">
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        matTooltip="Demandante"
+      >
+        Demandante
+      </th>
+      <td mat-cell *matCellDef="let row">{{ row.nome_ug }}</td>
+
+      <ng-container matColumnDef="valor">
+        <th
+          mat-header-cell
+          *matHeaderCellDef
+          mat-sort-header
+          matTooltip="Valor da Nota de Crédito"
+        >
+          Valor
+        </th>
+        <td mat-cell *matCellDef="let row">
+          {{ row.valor | currency: "BRL" }}
+        </td>
+      </ng-container>
+    </ng-container>
+
+    <ng-container matColumnDef="num_nota_credito">
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        matTooltip="Número da Nota de Crédito"
+      >
+        Número
+      </th>
+      <td mat-cell *matCellDef="let row">{{ row.num_nota_credito }}</td>
     </ng-container>
 
     <ng-container matColumnDef="dt_nota_credito">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header matTooltip="Data da Nota de Crédito">Data</th>
-      <td mat-cell *matCellDef="let row">{{row.dt_nota_credito | date }}</td>
+      <th
+        mat-header-cell
+        *matHeaderCellDef
+        mat-sort-header
+        matTooltip="Data da Nota de Crédito"
+      >
+        Data
+      </th>
+      <td mat-cell *matCellDef="let row">{{ row.dt_nota_credito | date }}</td>
     </ng-container>
 
     <ng-container matColumnDef="action">
-      <th mat-header-cell *matHeaderCellDef >Ações</th>
+      <th mat-header-cell *matHeaderCellDef>Ações</th>
       <td mat-cell *matCellDef="let row">
-
-        <button matTooltip="Editar Nota de Crédito" mat-icon-button (click)="updateNC( row.id_nota_credito )">
+        <button
+          matTooltip="Editar Nota de Crédito"
+          mat-icon-button
+          (click)="updateNC(row.id_nota_credito)"
+        >
           <mat-icon class="edit">edit</mat-icon>
         </button>
 
-        <button matTooltip="Excluir Nota de Crédito" mat-icon-button (click)="deleteNC( row.id_nota_credito )">
+        <button
+          matTooltip="Excluir Nota de Crédito"
+          mat-icon-button
+          (click)="deleteNC(row.id_nota_credito)"
+        >
           <mat-icon class="delete">delete</mat-icon>
         </button>
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
-  <mat-paginator [pageSizeOptions]="[5, 10, 15]" [pageSize]="5" showFirstLastButtons></mat-paginator>
+  <mat-paginator
+    [pageSizeOptions]="[5, 10, 15]"
+    [pageSize]="5"
+    showFirstLastButtons
+  ></mat-paginator>
 </mat-card>
 
 <mat-card class="mat-elevation-z0 adicionar">
-  <button matTooltip="Nova Nota de Crédito" mat-mini-fab color="primary" (click)="novaNC()" class="botao" >
+  <button
+    matTooltip="Nova Nota de Crédito"
+    mat-mini-fab
+    color="primary"
+    (click)="novaNC()"
+    class="botao"
+  >
     <mat-icon>add</mat-icon>
   </button>
 </mat-card>
