Validações nos formulários

--- a/frontend/src/app/pages/descent/descent-ddo/descent-ddo-create/descent-ddo-create.component.html
+++ b/frontend/src/app/pages/descent/descent-ddo/descent-ddo-create/descent-ddo-create.component.html
@@ -60,7 +60,12 @@
             <mat-datepicker #picker color="primary"></mat-datepicker>
           </mat-form-field>
           <div class="button-row">
-            <button mat-raised-button (click)="createItem()" color="primary">
+            <button
+              mat-raised-button
+              (click)="createItem()"
+              color="primary"
+              [disabled]="formulario.invalid"
+            >
               Adicionar
             </button>
 
