--- a/frontend/src/app/pages/ddo/ddo-item/ddo-item-form/ddo-item-form.component.html
+++ b/frontend/src/app/pages/ddo/ddo-item/ddo-item-form/ddo-item-form.component.html
@@ -1,20 +1,9 @@
 <mat-card class="titulo mat-elevation-z0">
-  <mat-card-title class="title">
-    Itens do DDO
-  </mat-card-title>
+  <mat-card-title class="title"> Itens do DDO </mat-card-title>
   <mat-card-subtitle class="subtitle">
     Definição das Quantidades e Elementos de Despesa
   </mat-card-subtitle>
 </mat-card>
-
-<!-- <button mat-raised-button mat-dialog-close>
-  Cancelar
-</button>
-<div>
-  <pre>
-    {{data | json}}
-  </pre>
-</div> -->
 
 <mat-card class="home mat-elevation-z4">
   <table mat-table class="full-width-table" [dataSource]="itens">
@@ -54,8 +43,6 @@
     <button mat-raised-button (click)="adicionarDados()" color="primary">
       Adicionar
     </button>
-    <button mat-raised-button mat-dialog-close>
-      Cancelar
-    </button>
+    <button mat-raised-button mat-dialog-close>Cancelar</button>
   </div>
 </mat-card>
